--- a/_includes/partials/checks.html
+++ b/_includes/partials/checks.html
@@ -16,12 +16,12 @@
   {%- assign errors = errors | push : "Your `_config.yml` configuration file does not define any main category for your talks. Have you set the `conference.talks.main_categories` property? See also [Talk Settings](https://github.com/DigitaleGesellschaft/jekyll-theme-conference/#talk-settings) section in the theme's README file." -%}
 {%- endif -%}
 
-{%- assign nbr_days = site.data.program.days | size -%}
+{%- assign nbr_days = site.data.schedule.days | size -%}
 {%- if nbr_days == 0 -%}
-  {%- assign errors = errors | push : "Your schedule in `_data/program.yml` does not seem to contain any days. Have you already created the file?" -%}
+  {%- assign errors = errors | push : "Your schedule in `_data/schedule.yml` does not seem to contain any days. Have you already created the file?" -%}
 {%- endif -%}
 {%- if site.conference.live -%}
-  {%- for d in site.data.program.days -%}
+  {%- for d in site.data.schedule.days -%}
     {%- unless d.date or d.date == "" -%}
       {%- assign error_msg = "Day " | append: forloop.index | append: " in your schedule should have a (non-empty) `date` property."  -%}
       {%- assign errors = errors | push : error_msg -%}
