--- a/_includes/partials/get_live_timestamps.html
+++ b/_includes/partials/get_live_timestamps.html
@@ -12,7 +12,7 @@
 {%- assign live_starts = "" -%}
 {%- assign live_ends = "" -%}
 
-{%- for d in site.data.program.days -%}
+{%- for d in site.data.schedule.days -%}
   {%- for r in d.rooms -%}
     {%- assign last_end = 0 -%}
 
