--- a/_layouts/config.html
+++ b/_layouts/config.html
@@ -11,14 +11,14 @@
     {% if site.conference.live -%}
     "live": {
         "time": {
-            {% assign d = site.data.program.days | first -%}
+            {% assign d = site.data.schedule.days | first -%}
             {%- include partials/get_day_time.html -%}
             {%- assign t = day_start_talk -%}
 
             {%- include partials/get_talk_timestamp.html -%}
             {%- assign conf_start = timestamp_start -%}
 
-            {%- assign d = site.data.program.days | last -%}
+            {%- assign d = site.data.schedule.days | last -%}
             {%- include partials/get_day_time.html -%}
             {%- assign t = day_end_talk -%}
 
