--- a/_layouts/room.html
+++ b/_layouts/room.html
@@ -18,7 +18,7 @@
   {{ content }}
 
   {% assign room_talks = false %}
-  {% for d in site.data.program.days %}
+  {% for d in site.data.schedule.days %}
     {% include partials/get_day_hash.html %}
     {% for r in d.rooms %}
       {% if this_room.name == r.name and r.talks.size > 0 %}
@@ -33,7 +33,7 @@
           {{- day_name -}}
         </h6>
 
-        <table class="list-program">
+        <table class="list-schedule">
         {%- for t in r.talks -%}
           {%- assign talk = site.talks | where: 'name', t.name | first -%}
           {%- include partials/get_main_category.html %}
