--- a/_layouts/speaker.html
+++ b/_layouts/speaker.html
@@ -67,8 +67,8 @@
   {% if active_speaker %}
     <h5 class="mt-4 mb-0">{{ site.data.lang[site.conference.lang].speaker.talks | default: "Talks at this conference" }}:</h5>
 
-    <table class="list-program">
-      {%- for d in site.data.program.days -%}
+    <table class="list-schedule">
+      {%- for d in site.data.schedule.days -%}
         {%- include partials/get_day_hash.html -%}
         {%- for r in d.rooms -%}
           {%- for t in r.talks -%}
