--- a/_sass/bootstrap/_reboot.scss
+++ b/_sass/bootstrap/_reboot.scss
@@ -55,9 +55,9 @@ body {
 }
 
 // Future-proof rule: in browsers that support :focus-visible, suppress the focus outline
-// on elements that programmatically receive focus but wouldn't normally show a visible
+// on elements that schedulematically receive focus but wouldn't normally show a visible
 // focus outline. In general, this would mean that the outline is only applied if the
-// interaction that led to the element receiving programmatic focus was a keyboard interaction,
+// interaction that led to the element receiving schedulematic focus was a keyboard interaction,
 // or the browser has somehow determined that the user is primarily a keyboard user and/or
 // wants focus outlines to always be presented.
 //
