--- a/_sass/conference.scss
+++ b/_sass/conference.scss
@@ -107,7 +107,7 @@ main.container img {
   font-size: 1em;
 }
 
-// Program
+// Schedule
 
 //   Sticky header and first column
 .table {
@@ -176,8 +176,8 @@ main.container img {
   width: 100%;
 }
 
-//   Program per Room
-.list-program {
+//   Schedule per Room
+.list-schedule {
   border: 0 none white;
 
   border-collapse: separate;
