--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -1,7 +1,7 @@
 {
     {% if site.conference.live and site.conference.live.streaming.enable -%}
     "days": [
-        {%- for d in site.data.program.days %}
+        {%- for d in site.data.schedule.days %}
         {
             {%- include partials/get_day_hash.html %}
             "name": "{{ day_name }}",
@@ -55,7 +55,7 @@
     {%- assign first_room = true -%}
     {%- for room in site.rooms -%}
         {%- assign first_talk = true -%}
-        {%- for d in site.data.program.days -%}
+        {%- for d in site.data.schedule.days -%}
             {%- for r in d.rooms -%}
                 {%- if room.name == r.name and room.live %}
 
