--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -29,7 +29,7 @@
   </p>
 
   <div class="mb-3 p-0">
-    {% for d in site.data.program.days -%}
+    {% for d in site.data.schedule.days -%}
       {%- include partials/get_day_hash.html -%}
       {%- for r in d.rooms -%}
         {%- for t in r.talks -%}
@@ -114,8 +114,8 @@
       <i class="fas fa-bullhorn"></i>&nbsp;{{ site.data.lang[site.conference.lang].overview | default: "Overview" }}
     </a>
 
-    <a href="{{ site.conference.program.url | prepend: site.baseurl }}" class="btn btn-light">
-      <i class="far fa-calendar-alt"></i>&nbsp;{{ site.data.lang[site.conference.lang].program.title | default: "Program" }}
+    <a href="{{ site.conference.schedule.url | prepend: site.baseurl }}" class="btn btn-light">
+      <i class="far fa-calendar-alt"></i>&nbsp;{{ site.data.lang[site.conference.lang].schedule.title | default: "Schedule" }}
     </a>
   </p>
 
