--- a/_includes/partials/header.html
+++ b/_includes/partials/header.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <!--- Navigator shouldn't be indexed-->
+  <meta name="robots" content="noindex, nofollow" />
   {% include partials/get_page_title.html -%}
   <title>
     {{- page_title -}}
