--- a/_includes/partials/info_bar.html
+++ b/_includes/partials/info_bar.html
@@ -13,10 +13,7 @@
 
 {%- if site.conference.info_bars.size > 0 -%}
   {%- for info_bar in site.conference.info_bars -%}
-    {%- if page.url == "/" and info_bar.pages_only != true -%}
-      {%- assign show_info_bar = true -%}
-    {%- endif -%}
-    {%- if page.url != "/" and info_bar.main_only != true -%}
+    {%- if page.url contains "/authors-workshop"  -%}
       {%- assign show_info_bar = true -%}
     {%- endif -%}
 
