--- a/_sass/bootstrap/_custom-forms.scss
+++ b/_sass/bootstrap/_custom-forms.scss
@@ -6,7 +6,6 @@
 // Checkboxes and radios
 //
 // Base class takes care of all the key behavioral aspects.
-@use "sass:math";
 
 .custom-control {
   position: relative;
@@ -27,13 +26,13 @@
   left: 0;
   z-index: -1; // Put the input behind the label so it doesn't overlay text
   width: $custom-control-indicator-size;
-  height: math.div(($font-size-base * $line-height-base + $custom-control-indicator-size), 2);
+  height: ($font-size-base * $line-height-base + $custom-control-indicator-size) / 2;
   opacity: 0;
 
   &:checked ~ .custom-control-label::before {
     color: $custom-control-indicator-checked-color;
     border-color: $custom-control-indicator-checked-border-color;
-    height: math.div(($font-size-base * $line-height-base + $custom-control-indicator-size), 2);
+    @include gradient-bg($custom-control-indicator-checked-bg);
     @include box-shadow($custom-control-indicator-checked-box-shadow);
   }
 
@@ -84,7 +83,8 @@
   // Background-color and (when enabled) gradient
   &::before {
     position: absolute;
-    top: math.div(($font-size-base * $line-height-base - $custom-control-indicator-size), 2);
+    top: ($font-size-base * $line-height-base - $custom-control-indicator-size) / 2;
+    left: -($custom-control-gutter + $custom-control-indicator-size);
     display: block;
     width: $custom-control-indicator-size;
     height: $custom-control-indicator-size;
@@ -96,16 +96,15 @@
   }
 
   // Foreground (icon)
-    &::after {
+  &::after {
     position: absolute;
-    top: math.div(($font-size-base * $line-height-base - $custom-control-indicator-size), 2);
+    top: ($font-size-base * $line-height-base - $custom-control-indicator-size) / 2;
+    left: -($custom-control-gutter + $custom-control-indicator-size);
     display: block;
     width: $custom-control-indicator-size;
     height: $custom-control-indicator-size;
     content: "";
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: $custom-control-indicator-bg-size;
+    background: no-repeat 50% / #{$custom-control-indicator-bg-size};
   }
 }
 
@@ -187,7 +186,7 @@
     }
 
     &::after {
-      top: add(math.div(($font-size-base * $line-height-base - $custom-control-indicator-size), 2), $custom-control-indicator-border-width * 2);
+      top: add(($font-size-base * $line-height-base - $custom-control-indicator-size) / 2, $custom-control-indicator-border-width * 2);
       left: add(-($custom-switch-width + $custom-control-gutter), $custom-control-indicator-border-width * 2);
       width: $custom-switch-indicator-size;
       height: $custom-switch-indicator-size;
@@ -405,7 +404,7 @@
   &::-webkit-slider-thumb {
     width: $custom-range-thumb-width;
     height: $custom-range-thumb-height;
-    margin-top: math.div($custom-range-track-height - $custom-range-thumb-height, 2); // Webkit specific
+    margin-top: ($custom-range-track-height - $custom-range-thumb-height) / 2; // Webkit specific
     @include gradient-bg($custom-range-thumb-bg);
     border: $custom-range-thumb-border;
     @include border-radius($custom-range-thumb-border-radius);
@@ -480,7 +479,7 @@
     cursor: $custom-range-track-cursor;
     background-color: transparent;
     border-color: transparent;
-    border-width: math.div($custom-range-thumb-height, 2);
+    border-width: $custom-range-thumb-height / 2;
     @include box-shadow($custom-range-track-box-shadow);
   }
 
