--- a/_sass/bootstrap/_functions.scss
+++ b/_sass/bootstrap/_functions.scss
@@ -4,9 +4,6 @@
 
 // Ascending
 // Used to evaluate Sass maps like our grid breakpoints.
-
-@use "sass:math";
-
 @mixin _assert-ascending($map, $map-name) {
   $prev-key: null;
   $prev-num: null;
@@ -78,7 +75,7 @@
   $g: green($color);
   $b: blue($color);
 
-  $yiq: math.div(($r * 299) + ($g * 587) + ($b * 114), 1000);
+  $yiq: (($r * 299) + ($g * 587) + ($b * 114)) / 1000;
 
   @if ($yiq >= $yiq-contrasted-threshold) {
     @return $dark;
