--- a/_sass/bootstrap/_tooltip.scss
+++ b/_sass/bootstrap/_tooltip.scss
@@ -1,5 +1,4 @@
 // Base class
-@use "sass:math";
 .tooltip {
   position: absolute;
   z-index: $zindex-tooltip;
@@ -38,7 +37,7 @@
 
     &::before {
       top: 0;
-      border-width: $tooltip-arrow-height math.div($tooltip-arrow-width, 2) 0;
+      border-width: $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
       border-top-color: $tooltip-arrow-color;
     }
   }
@@ -54,7 +53,7 @@
 
     &::before {
       right: 0;
-      border-width: math.div($tooltip-arrow-width, 2) $tooltip-arrow-height math.div($tooltip-arrow-width, 2) 0;
+      border-width: ($tooltip-arrow-width / 2) $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
       border-right-color: $tooltip-arrow-color;
     }
   }
@@ -68,7 +67,7 @@
 
     &::before {
       bottom: 0;
-      border-width: 0 math.div($tooltip-arrow-width, 2) $tooltip-arrow-height;
+      border-width: 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
       border-bottom-color: $tooltip-arrow-color;
     }
   }
@@ -84,7 +83,7 @@
 
     &::before {
       left: 0;
-      border-width: math.div($tooltip-arrow-width, 2) 0 math.div($tooltip-arrow-width, 2) $tooltip-arrow-height;
+      border-width: ($tooltip-arrow-width / 2) 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
       border-left-color: $tooltip-arrow-color;
     }
   }
